# matterhorn

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.txt  CHANGELOG.md  HASKELL.md  LICENSE  PRACTICES.md  README.md  RELEASES.md  build.sh  cabal.project  cabal.project.freeze  cabal.project.travis  checksums.sh  install.sh  keybindings.md  matterhorn.cabal  mattermost-demo-client.cabal  mkrelease.sh  new-install.sh  new-run.sh  notify  run.sh  sample-config.ini  sample-config.json  update-generated-docs.sh  update-tags
client-scripts/: cowsay  figlet
docs/: AUTHORS.txt  BUILDING.md  FAQ.md  PRACTICES.md  RELEASES.md  UserGuide.md  bulk-channel-fetching.md  commands.md  csCurrentTeam_audit.txt  keybindings.md  multiteam.txt  new-messages-management.txt  notification-scripts.md  sample-config.ini
emoji/: NOTICE.txt  emoji.json
notification-scripts/: notify  notify-macos  notifyV2
programs/: Main.hs
scripts/: checksums.sh  fetch-syntax-xml.sh  local-mkrelease.sh  mkrelease.sh  rot13  talky  update-generated-docs.sh  update-tags  vm-mkrelease-wrapper.sh
setup/: setup_linux.sh
src/: App.hs  AsyncThread.hs  Clipboard.hs  Command.hs  Command.hs-boot  Completion.hs  Config.hs  Connection.hs  Constants.hs  Draw.hs  DrawUtil.hs  Emoji.hs  Events.hs  FilePaths.hs  HelpTopics.hs  Highlighting.hs  IOUtil.hs  InputHistory.hs  KeyMap.hs  LastRunState.hs  Login.hs  Main.hs  Markdown.hs  Options.hs  RunState.hs  Scripts.hs  State.hs  TeamSelect.hs  Themes.hs  TimeUtils.hs  Types.hs  Util.hs  Zipper.hs
src/Config/: Schema.hs
src/Draw/: Autocomplete.hs  ChannelList.hs  ChannelListOverlay.hs  DeleteChannelConfirm.hs  JoinChannel.hs  LeaveChannelConfirm.hs  ListOverlay.hs  Main.hs  ManageAttachments.hs  MessageReactions.hs  MessageSelect.hs  Messages.hs  NotifyPrefs.hs  PostListOverlay.hs  ReactionEmojiListOverlay.hs  RichText.hs  ShowHelp.hs  TabbedWindow.hs  ThemeListOverlay.hs  URLList.hs  UserListOverlay.hs  Util.hs  ViewMessage.hs
src/Events/: ChannelListOverlay.hs  ChannelScroll.hs  ChannelSelect.hs  DeleteChannelConfirm.hs  EditNotifyPrefs.hs  JoinChannel.hs  Keybindings.hs  LeaveChannelConfirm.hs  Main.hs  ManageAttachments.hs  MessageReactions.hs  MessageSelect.hs  PostListOverlay.hs  ReactionEmojiListOverlay.hs  ShowHelp.hs  TabbedWindow.hs  ThemeListOverlay.hs  UrlSelect.hs  UserListOverlay.hs  ViewMessage.hs
src/Matterhorn/: App.hs  Clipboard.hs  Command.hs  Command.hs-boot  Config.hs  Connection.hs  Constants.hs  Draw.hs  Emoji.hs  Events.hs  FilePaths.hs  HelpTopics.hs  IOUtil.hs  InputHistory.hs  KeyMap.hs  KeybindingConsistency.hs  LastRunState.hs  Login.hs  Options.hs  Prelude.hs  Scripts.hs  TeamSelect.hs  Themes.hs  TimeUtils.hs  Types.hs  Util.hs  Zipper.hs
src/Matterhorn/Config/: Schema.hs
src/Matterhorn/Draw/: Autocomplete.hs  Buttons.hs  ChannelList.hs  ChannelListOverlay.hs  ChannelListWindow.hs  ChannelSelectPrompt.hs  ChannelTopicWindow.hs  DeleteChannelConfirm.hs  InputPreview.hs  LeaveChannelConfirm.hs  ListOverlay.hs  ListWindow.hs  Main.hs  ManageAttachments.hs  MessageDeleteConfirm.hs  MessageInterface.hs  Messages.hs  NotifyPrefs.hs  PostListOverlay.hs  PostListWindow.hs  ReactionEmojiListOverlay.hs  ReactionEmojiListWindow.hs  RichText.hs  SaveAttachmentWindow.hs  ShowHelp.hs  TabbedWindow.hs  ThemeListOverlay.hs  ThemeListWindow.hs  ThreadWindow.hs  URLList.hs  UserListOverlay.hs  UserListWindow.hs  Util.hs
src/Matterhorn/Events/: ChannelListOverlay.hs  ChannelListWindow.hs  ChannelSelect.hs  ChannelTopicWindow.hs  DeleteChannelConfirm.hs  EditNotifyPrefs.hs  Global.hs  Keybindings.hs  LeaveChannelConfirm.hs  Main.hs  ManageAttachments.hs  MessageInterface.hs  MessageSelect.hs  Mouse.hs  PostListOverlay.hs  PostListWindow.hs  ReactionEmojiListOverlay.hs  ReactionEmojiListWindow.hs  SaveAttachmentWindow.hs  ShowHelp.hs  TabbedWindow.hs  ThemeListOverlay.hs  ThemeListWindow.hs  ThreadWindow.hs  UrlSelect.hs  UserListOverlay.hs  UserListWindow.hs  Websocket.hs
src/Matterhorn/State/: Async.hs  Attachments.hs  Autocomplete.hs  ChannelList.hs  ChannelListOverlay.hs  ChannelListWindow.hs  ChannelSelect.hs  ChannelTopicWindow.hs  Channels.hs  Common.hs  Editing.hs  Editing.hs-boot  Flagging.hs  Help.hs  Links.hs  ListOverlay.hs  ListWindow.hs  Logging.hs  MessageSelect.hs  Messages.hs  Messages.hs-boot  NotifyPrefs.hs  PostListOverlay.hs  PostListWindow.hs  ReactionEmojiListOverlay.hs  ReactionEmojiListWindow.hs  Reactions.hs  SaveAttachmentWindow.hs  Setup.hs  Teams.hs  Teams.hs-boot  ThemeListOverlay.hs  ThemeListWindow.hs  ThreadWindow.hs  ThreadWindow.hs-boot  UrlSelect.hs  UserListOverlay.hs  UserListWindow.hs  Users.hs
src/Matterhorn/Types/: Channels.hs  Common.hs  Core.hs  DirectionalSeq.hs  EditState.hs  KeyEvents.hs  MessageInterface.hs  Messages.hs  NonemptyStack.hs  Posts.hs  RichText.hs  TabbedWindow.hs  Users.hs
src/Matterhorn/Windows/: ViewMessage.hs
src/Prelude/: MH.hs
src/State/: Async.hs  Attachments.hs  Autocomplete.hs  ChannelListOverlay.hs  ChannelScroll.hs  ChannelSelect.hs  Channels.hs  Common.hs  Editing.hs  Editing.hs-boot  Flagging.hs  Help.hs  ListOverlay.hs  Logging.hs  MessageSelect.hs  Messages.hs  Messages.hs-boot  NotifyPrefs.hs  PostListOverlay.hs  ReactionEmojiListOverlay.hs  Reactions.hs  Setup.hs  ThemeListOverlay.hs  Themes.hs  UrlSelect.hs  UserListOverlay.hs  Users.hs
src/Types/: Channels.hs  Common.hs  DirectionalSeq.hs  KeyEvents.hs  Keybindings.hs  Messages.hs  Posts.hs  RichText.hs  UserNames.hs  Users.hs
src/Windows/: ViewMessage.hs
syntax/: abc.xml  actionscript.xml  ada.xml  agda.xml  alert_indent.xml  apache.xml  asn1.xml  asp.xml  ats.xml  awk.xml  bash.xml  bibtex.xml  boo.xml  c.xml  changelog.xml  clojure.xml  cmake.xml  coffee.xml  coldfusion.xml  commonlisp.xml  cpp.xml  crystal.xml  cs.xml  curry.xml  d.xml  dart.xml  debiancontrol.xml  default.xml  diff.xml  djangotemplate.xml  dockerfile.xml  dosbat.xml  dot.xml  doxygenlua.xml  eiffel.xml  elixir.xml  elm.xml  email.xml  erlang.xml  fasm.xml  (+110 more)
test/: Cheapskate_QCA.hs  Message_QCA.hs  RichText_QCA.hs  test_messages.hs
(+6 files in other folders)
