name:                matterhorn
version:             40000.1.0
synopsis:            Terminal client for the Mattermost chat system
description:         This is a terminal client for the Mattermost chat
                     system. Please see the README for a list of
                     features and information on getting started.
license:             BSD3
license-file:        LICENSE
author:              matterhorn@galois.com
maintainer:          matterhorn@galois.com
copyright:           ©2016-2017 AUTHORS.txt
category:            Chat
build-type:          Simple
cabal-version:       >= 1.18
tested-with:         GHC == 7.10.3, GHC == 8.0.1

extra-doc-files:     CHANGELOG.md, README.md

source-repository    head
  type: git
  location: https://github.com/matterhorn-chat/matterhorn.git

executable matterhorn
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                       Command
                       Connection
                       Completion
                       State
                       State.Common
                       State.Editing
                       State.PostListOverlay
                       State.Setup
                       State.Setup.Threads
                       Zipper
                       Themes
                       Draw
                       Draw.Main
                       Draw.Messages
                       Draw.ChannelList
                       Draw.ShowHelp
                       Draw.LeaveChannelConfirm
                       Draw.DeleteChannelConfirm
                       Draw.PostListOverlay
                       Draw.JoinChannel
                       Draw.Util
                       InputHistory
                       IOUtil
                       Events
                       Events.ShowHelp
                       Events.MessageSelect
                       Events.Main
                       Events.JoinChannel
                       Events.ChannelScroll
                       Events.ChannelSelect
                       Events.PostListOverlay
                       Events.UrlSelect
                       Events.LeaveChannelConfirm
                       Events.DeleteChannelConfirm
                       HelpTopics
                       Scripts
                       Types
                       Types.Channels
                       Types.Messages
                       Types.Users
                       Types.Posts
                       FilePaths
                       TeamSelect
                       Login
                       Markdown
                       Options
                       Paths_matterhorn
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall -threaded
  build-depends:       base                 >=4.8     && <5
                     , mattermost-api       == 40000.1.0
                     , base-compat          >= 0.9    && < 0.10
                     , unordered-containers >= 0.2    && < 0.3
                     , containers           >= 0.5.7  && < 0.6
                     , connection           >= 0.2    && < 0.3
                     , text                 >= 1.2    && < 1.3
                     , bytestring           >= 0.10   && < 0.11
                     , stm                  >= 2.4    && < 2.5
                     , config-ini           >= 0.1.2  && < 0.2
                     , process              >= 1.4    && < 1.7
                     , microlens-platform   >= 0.3    && < 0.4
                     , brick                >= 0.23   && < 0.24
                     , vty                  >= 5.17   && < 5.18
                     , transformers         >= 0.4    && < 0.6
                     , text-zipper          >= 0.10   && < 0.11
                     , time                 >= 1.6    && < 1.9
                     , xdg-basedir          >= 0.2    && < 0.3
                     , filepath             >= 1.4    && < 1.5
                     , directory            >= 1.3    && < 1.4
                     , vector               < 0.13
                     , strict               >= 0.3    && < 0.4
                     , hashable             >= 1.2    && < 1.3
                     , cheapskate           >= 0.1    && < 0.2
                     , utf8-string          >= 1.0    && < 1.1
                     , temporary            >= 1.2    && < 1.3
                     , gitrev               >= 1.3    && < 1.4
                     , Hclip                >= 3.0    && < 3.1
                     , mtl                  >= 2.2    && < 2.3
                     , aspell-pipe          >= 0.3    && < 0.4
                     , stm-delay            >= 0.1    && < 0.2
                     , unix                 >= 2.7.1.0 && < 2.7.3.0
                     , skylighting          >= 0.3.3.1 && < 0.4
  default-language:    Haskell2010

test-suite test_messages
  type:               exitcode-stdio-1.0
  main-is:            test_messages.hs
  other-modules:      Cheapskate_QCA
                    , Message_QCA
                    , Types.Messages
                    , Types.Posts
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -Wall -fno-warn-orphans
  hs-source-dirs:     src, test
  build-depends:      base                 >=4.7     && <5
                    , base-compat          >= 0.9    && < 0.10
                    , brick                >= 0.23   && < 0.24
                    , bytestring           >= 0.10   && < 0.11
                    , cheapskate           >= 0.1    && < 0.2
                    , checkers             >= 0.4    && < 0.5
                    , config-ini           >= 0.1.2  && < 0.2
                    , connection           >= 0.2    && < 0.3
                    , containers           >= 0.5.7  && < 0.6
                    , directory            >= 1.3    && < 1.4
                    , filepath             >= 1.4    && < 1.5
                    , hashable             >= 1.2    && < 1.3
                    , Hclip                >= 3.0    && < 3.1
                    , mattermost-api       == 40000.1.0
                    , mattermost-api-qc    == 40000.1.0
                    , microlens-platform   >= 0.3    && < 0.4
                    , mtl                  >= 2.2    && < 2.3
                    , process              >= 1.4    && < 1.7
                    , quickcheck-text      >= 0.1    && < 0.2
                    , stm                  >= 2.4    && < 2.5
                    , strict               >= 0.3    && < 0.4
                    , string-conversions   >= 0.4    && < 0.5
                    , tasty                >= 0.11   && < 0.12
                    , tasty-hunit          >= 0.9    && < 0.10
                    , tasty-quickcheck     >= 0.8    && < 0.9
                    , text                 >= 1.2    && < 1.3
                    , text-zipper          >= 0.10   && < 0.11
                    , time                 >= 1.6    && < 1.9
                    , transformers         >= 0.4    && < 0.6
                    , Unique               >= 0.4    && < 0.5
                    , unordered-containers >= 0.2    && < 0.3
                    , vector               <= 0.12.0.1
                    , vty                  >= 5.17   && < 5.18
                    , xdg-basedir          >= 0.2    && < 0.3
