name:                matterhorn
version:             50200.5.0
synopsis:            Terminal client for the Mattermost chat system
description:         This is a terminal client for the Mattermost chat
                     system. Please see the README for a list of
                     features and information on getting started.
license:             BSD3
license-file:        LICENSE
author:              matterhorn@galois.com
maintainer:          matterhorn@galois.com
copyright:           ©2016-2019 docs/AUTHORS.txt
category:            Chat
build-type:          Simple
cabal-version:       >= 1.18
tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

data-files:          syntax/*.xml
                     syntax/language.dtd
                     syntax/LICENSE

extra-doc-files:     CHANGELOG.md
                     README.md
                     docs/AUTHORS.txt
                     docs/PRACTICES.md
                     scripts/cowsay
                     scripts/figlet
                     scripts/rot13
                     notification-scripts/notify
                     emoji/LICENSE.txt
                     emoji/emoji.json
                     emoji/NOTICE.txt

source-repository    head
  type: git
  location: https://github.com/matterhorn-chat/matterhorn.git

executable matterhorn
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                       Command
                       Connection
                       App
                       Clipboard
                       Constants
                       State.Async
                       State.Attachments
                       State.Autocomplete
                       State.Channels
                       State.ChannelSelect
                       State.Common
                       State.Editing
                       State.Flagging
                       State.Help
                       State.Logging
                       State.Messages
                       State.MessageSelect
                       State.PostListOverlay
                       State.ReactionEmojiListOverlay
                       State.Reactions
                       State.Setup
                       State.Setup.Threads
                       State.Setup.Threads.Logging
                       State.Themes
                       State.UrlSelect
                       State.ListOverlay
                       State.UserListOverlay
                       State.ChannelListOverlay
                       State.Users
                       Zipper
                       Themes
                       Draw
                       Emoji
                       Draw.ManageAttachments
                       Draw.Autocomplete
                       Draw.Main
                       Draw.Messages
                       Draw.ChannelList
                       Draw.ChannelListOverlay
                       Draw.ReactionEmojiListOverlay
                       Draw.ShowHelp
                       Draw.LeaveChannelConfirm
                       Draw.DeleteChannelConfirm
                       Draw.PostListOverlay
                       Draw.UserListOverlay
                       Draw.ListOverlay
                       Draw.URLList
                       Draw.Util
                       Draw.TabbedWindow
                       InputHistory
                       IOUtil
                       Events
                       Events.ManageAttachments
                       Events.Keybindings
                       Events.ShowHelp
                       Events.MessageSelect
                       Events.Main
                       Events.ChannelSelect
                       Events.PostListOverlay
                       Events.UrlSelect
                       Events.UserListOverlay
                       Events.ChannelListOverlay
                       Events.ReactionEmojiListOverlay
                       Events.LeaveChannelConfirm
                       Events.DeleteChannelConfirm
                       Events.TabbedWindow
                       Windows.ViewMessage
                       HelpTopics
                       KeyMap
                       LastRunState
                       Scripts
                       TimeUtils
                       Prelude.MH
                       Types
                       Types.Channels
                       Types.Common
                       Types.DirectionalSeq
                       Types.KeyEvents
                       Types.Messages
                       Types.Users
                       Types.UserNames
                       Types.Posts
                       FilePaths
                       TeamSelect
                       Login
                       Markdown
                       Options
                       Util
                       Paths_matterhorn
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables,
                       NoImplicitPrelude
  ghc-options:         -Wall -threaded -with-rtsopts=-I0 -Wcompat
  build-depends:       base                 >=4.8     && <5
                     , mattermost-api       == 50200.2.0
                     , base-compat          >= 0.9    && < 0.11
                     , unordered-containers >= 0.2    && < 0.3
                     , containers           >= 0.5.7  && < 0.7
                     , data-clist           >= 0.1.2  && < 0.2
                     , semigroups           >= 0.18   && < 0.19
                     , connection           >= 0.2    && < 0.4
                     , text                 >= 1.2    && < 1.3
                     , bytestring           >= 0.10   && < 0.11
                     , stm                  >= 2.4    && < 2.6
                     , config-ini           >= 0.2.2.0 && < 0.3
                     , process              >= 1.4    && < 1.7
                     , microlens-platform   >= 0.3    && < 0.4
                     , brick                >= 0.50   && < 0.51
                     , brick-skylighting    >= 0.2    && < 0.4
                     , vty                  >= 5.23.1 && < 5.26
                     , word-wrap            >= 0.4.0  && < 0.5
                     , transformers         >= 0.4    && < 0.6
                     , text-zipper          >= 0.10   && < 0.11
                     , time                 >= 1.6    && < 1.9
                     , xdg-basedir          >= 0.2    && < 0.3
                     , filepath             >= 1.4    && < 1.5
                     , directory            >= 1.3    && < 1.4
                     , vector               < 0.13
                     , strict               >= 0.3    && < 0.4
                     , hashable             >= 1.2    && < 1.3
                     , cheapskate           >= 0.1    && < 0.2
                     , utf8-string          >= 1.0    && < 1.1
                     , temporary            >= 1.2    && < 1.4
                     , gitrev               >= 1.3    && < 1.4
                     , Hclip                >= 3.0    && < 3.1
                     , mtl                  >= 2.2    && < 2.3
                     , aspell-pipe          >= 0.3    && < 0.4
                     , stm-delay            >= 0.1    && < 0.2
                     , unix                 >= 2.7.1.0 && < 2.7.3.0
                     , skylighting-core     >= 0.7    && < 0.9
                     , timezone-olson       >= 0.1.7   && < 0.2
                     , timezone-series      >= 0.1.6.1 && < 0.2
                     , aeson                >= 1.2.3.0 && < 1.5
                     , async                >= 2.2     && < 2.3
                     , uuid                 >= 1.3     && < 1.4
                     , random               >= 1.1     && < 1.2
  default-language:    Haskell2010

test-suite test_messages
  type:               exitcode-stdio-1.0
  main-is:            test_messages.hs
  other-modules:      Cheapskate_QCA
                    , Message_QCA
                    , TimeUtils
                    , Types.Messages
                    , Types.Posts
                    , Types.UserNames
                    , Types.Common
                    , Types.DirectionalSeq
                    , Prelude.MH
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -Wall -fno-warn-orphans -Wcompat
  hs-source-dirs:     src, test
  build-depends:      base                 >=4.7     && <5
                    , base-compat          >= 0.9    && < 0.11
                    , brick                >= 0.50   && < 0.51
                    , bytestring           >= 0.10   && < 0.11
                    , cheapskate           >= 0.1    && < 0.2
                    , checkers             >= 0.4    && < 0.6
                    , config-ini           >= 0.2.2.0 && < 0.3
                    , connection           >= 0.2    && < 0.4
                    , containers           >= 0.5.7  && < 0.7
                    , directory            >= 1.3    && < 1.4
                    , filepath             >= 1.4    && < 1.5
                    , hashable             >= 1.2    && < 1.3
                    , Hclip                >= 3.0    && < 3.1
                    , mattermost-api       == 50200.2.0
                    , mattermost-api-qc    == 50200.2.0
                    , microlens-platform   >= 0.3    && < 0.4
                    , mtl                  >= 2.2    && < 2.3
                    , process              >= 1.4    && < 1.7
                    , quickcheck-text      >= 0.1    && < 0.2
                    , stm                  >= 2.4    && < 2.6
                    , strict               >= 0.3    && < 0.4
                    , string-conversions   >= 0.4    && < 0.5
                    , tasty                >= 0.11   && < 1.3
                    , tasty-hunit          >= 0.9    && < 0.12
                    , tasty-quickcheck     >= 0.8    && < 0.12
                    , text                 >= 1.2    && < 1.3
                    , text-zipper          >= 0.10   && < 0.11
                    , time                 >= 1.6    && < 1.9
                    , timezone-olson       >= 0.1.7  && < 0.2
                    , timezone-series      >= 0.1.6.1 && < 0.2
                    , transformers         >= 0.4    && < 0.6
                    , Unique               >= 0.4    && < 0.5
                    , unordered-containers >= 0.2    && < 0.3
                    , vector               <  0.13
                    , vty                  >= 5.23.1 && < 5.26
                    , xdg-basedir          >= 0.2    && < 0.3
                    , semigroups           >= 0.18   && < 0.19
                    , uuid                 >= 1.3    && < 1.4
