name:                matterhorn
version:             50200.17.0
synopsis:            Terminal client for the Mattermost chat system
description:         This is a terminal client for the Mattermost chat
                     system. Please see the README for a list of
                     features and information on getting started.
license:             BSD3
license-file:        LICENSE
author:              matterhorn@galois.com
maintainer:          matterhorn@galois.com
copyright:           ©2016-2019 docs/AUTHORS.txt
category:            Chat
build-type:          Simple
cabal-version:       1.18
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3

data-files:          syntax/*.xml
                     syntax/language.dtd
                     syntax/LICENSE
                     emoji/NOTICE.txt
                     emoji/LICENSE.txt
                     emoji/emoji.json

extra-doc-files:     CHANGELOG.md
                     README.md
                     docs/keybindings.md
                     docs/notification-scripts.md
                     docs/commands.md
                     docs/AUTHORS.txt
                     docs/PRACTICES.md
                     client-scripts/cowsay
                     client-scripts/figlet
                     client-scripts/rot13
                     client-scripts/talky
                     notification-scripts/notify
                     emoji/LICENSE.txt
                     emoji/emoji.json
                     emoji/NOTICE.txt

source-repository    head
  type: git
  location: https://github.com/matterhorn-chat/matterhorn.git

library
  hs-source-dirs:      src
  exposed-modules:     Matterhorn.App
                       Matterhorn.Clipboard
                       Matterhorn.Command
                       Matterhorn.Config
                       Matterhorn.Config.Schema
                       Matterhorn.Connection
                       Matterhorn.Constants
                       Matterhorn.Draw
                       Matterhorn.Draw.Autocomplete
                       Matterhorn.Draw.Buttons
                       Matterhorn.Draw.ChannelList
                       Matterhorn.Draw.ChannelListWindow
                       Matterhorn.Draw.ChannelSelectPrompt
                       Matterhorn.Draw.ChannelTopicWindow
                       Matterhorn.Draw.DeleteChannelConfirm
                       Matterhorn.Draw.InputPreview
                       Matterhorn.Draw.LeaveChannelConfirm
                       Matterhorn.Draw.ListWindow
                       Matterhorn.Draw.Main
                       Matterhorn.Draw.ManageAttachments
                       Matterhorn.Draw.MessageDeleteConfirm
                       Matterhorn.Draw.MessageInterface
                       Matterhorn.Draw.Messages
                       Matterhorn.Draw.NotifyPrefs
                       Matterhorn.Draw.PostListWindow
                       Matterhorn.Draw.ReactionEmojiListWindow
                       Matterhorn.Draw.RichText
                       Matterhorn.Draw.RichText.Wrap
                       Matterhorn.Draw.RichText.Flatten
                       Matterhorn.Draw.ShowHelp
                       Matterhorn.Draw.TabbedWindow
                       Matterhorn.Draw.ThemeListWindow
                       Matterhorn.Draw.UserListWindow
                       Matterhorn.Draw.Util
                       Matterhorn.Emoji
                       Matterhorn.Events
                       Matterhorn.Events.ChannelListWindow
                       Matterhorn.Events.ChannelSelect
                       Matterhorn.Events.ChannelTopicWindow
                       Matterhorn.Events.SaveAttachmentWindow
                       Matterhorn.Events.DeleteChannelConfirm
                       Matterhorn.Events.EditNotifyPrefs
                       Matterhorn.Events.Keybindings
                       Matterhorn.Events.LeaveChannelConfirm
                       Matterhorn.Events.Global
                       Matterhorn.Events.Main
                       Matterhorn.Events.ManageAttachments
                       Matterhorn.Events.MessageSelect
                       Matterhorn.Events.MessageInterface
                       Matterhorn.Events.Mouse
                       Matterhorn.Events.PostListWindow
                       Matterhorn.Events.ReactionEmojiListWindow
                       Matterhorn.Events.ShowHelp
                       Matterhorn.Events.TabbedWindow
                       Matterhorn.Events.ThemeListWindow
                       Matterhorn.Events.ThreadWindow
                       Matterhorn.Events.UrlSelect
                       Matterhorn.Events.UserListWindow
                       Matterhorn.Events.Websocket
                       Matterhorn.FilePaths
                       Matterhorn.HelpTopics
                       Matterhorn.IOUtil
                       Matterhorn.InputHistory
                       Matterhorn.LastRunState
                       Matterhorn.Login
                       Matterhorn.Options
                       Matterhorn.Prelude
                       Matterhorn.Scripts
                       Matterhorn.State.Async
                       Matterhorn.State.Attachments
                       Matterhorn.State.Autocomplete
                       Matterhorn.State.ChannelList
                       Matterhorn.State.ChannelListWindow
                       Matterhorn.State.ChannelSelect
                       Matterhorn.State.Channels
                       Matterhorn.State.ChannelTopicWindow
                       Matterhorn.State.SaveAttachmentWindow
                       Matterhorn.State.Common
                       Matterhorn.State.Editing
                       Matterhorn.State.Flagging
                       Matterhorn.State.Help
                       Matterhorn.State.Links
                       Matterhorn.State.ListWindow
                       Matterhorn.State.Logging
                       Matterhorn.State.MessageSelect
                       Matterhorn.State.Messages
                       Matterhorn.State.NotifyPrefs
                       Matterhorn.State.PostListWindow
                       Matterhorn.State.ReactionEmojiListWindow
                       Matterhorn.State.Reactions
                       Matterhorn.State.Setup
                       Matterhorn.State.Setup.Threads
                       Matterhorn.State.Setup.Threads.Logging
                       Matterhorn.State.Teams
                       Matterhorn.State.ThemeListWindow
                       Matterhorn.State.ThreadWindow
                       Matterhorn.State.UrlSelect
                       Matterhorn.State.UserListWindow
                       Matterhorn.State.Users
                       Matterhorn.Themes
                       Matterhorn.TimeUtils
                       Matterhorn.Types
                       Matterhorn.Types.Channels
                       Matterhorn.Types.Common
                       Matterhorn.Types.Core
                       Matterhorn.Types.DirectionalSeq
                       Matterhorn.Types.EditState
                       Matterhorn.Types.KeyEvents
                       Matterhorn.Types.Messages
                       Matterhorn.Types.MessageInterface
                       Matterhorn.Types.NonemptyStack
                       Matterhorn.Types.Posts
                       Matterhorn.Types.RichText
                       Matterhorn.Types.TabbedWindow
                       Matterhorn.Types.Users
                       Matterhorn.Util
                       Matterhorn.Windows.ViewMessage
                       Matterhorn.Zipper
                       Paths_matterhorn
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables,
                       NoImplicitPrelude

  ghc-options:         -Wall -Wcompat
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths

  build-depends:       base                 >=4.8      && <5
                     , mattermost-api       == 50200.13.0
                     , base-compat          >= 0.9     && < 0.13
                     , unordered-containers >= 0.2     && < 0.3
                     , containers           >= 0.5.7   && < 0.7
                     , split                >= 0.2     && < 0.3
                     , data-clist           >= 0.1.2   && < 0.2
                     , semigroups           >= 0.18    && < 0.20
                     , connection           >= 0.2     && < 0.4
                     , text                 >= 1.2     && < 1.3
                     , bytestring           >= 0.10    && < 0.12
                     , stm                  >= 2.4     && < 2.6
                     , config-ini           >= 0.2.2.0 && < 0.3
                     , process              >= 1.4     && < 1.7
                     , microlens-platform   >= 0.3     && < 0.5
                     , brick                >= 0.70    && < 0.71
                     , brick-skylighting    >= 0.2     && < 0.4
                     , vty                  >= 5.35    && < 5.36
                     , word-wrap            >= 0.4.0   && < 0.5
                     , transformers         >= 0.4     && < 0.6
                     , text-zipper          >= 0.11    && < 0.12
                     , time                 >= 1.6     && < 2.0
                     , xdg-basedir          >= 0.2     && < 0.3
                     , filepath             >= 1.4     && < 1.5
                     , directory            >= 1.3     && < 1.4
                     , vector               < 0.13
                     , strict               >= 0.3     && < 0.5
                     , hashable             >= 1.2     && < 1.4
                     , commonmark           >= 0.2.1   && < 0.3
                     , commonmark-extensions >= 0.2.1.2 && < 0.3
                     , parsec               >= 3.1     && < 3.2
                     , utf8-string          >= 1.0     && < 1.1
                     , temporary            >= 1.2     && < 1.4
                     , gitrev               >= 1.3     && < 1.4
                     , Hclip                >= 3.0     && < 3.1
                     , mtl                  >= 2.2     && < 2.3
                     , aspell-pipe          >= 0.6     && < 0.7
                     , stm-delay            >= 0.1     && < 0.2
                     , unix                 >= 2.7.1.0 && < 2.7.3.0
                     , skylighting-core     >= 0.12    && < 0.13
                     , timezone-olson       >= 0.2     && < 0.3
                     , timezone-series      >= 0.1.6.1 && < 0.2
                     , aeson                >= 1.2.3.0 && < 2.1
                     , async                >= 2.2     && < 2.3
                     , uuid                 >= 1.3     && < 1.4
                     , random               >= 1.1     && < 1.2
                     , network-uri          >= 2.6     && < 2.7
  default-language:    Haskell2010

executable matterhorn
  hs-source-dirs:      programs
  main-is:             Main.hs

  ghc-options:         -Wall -threaded -with-rtsopts=-I0 -Wcompat
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths

  build-depends:       base                 >=4.8      && <5
                     , matterhorn
                     , text
  default-language:    Haskell2010

test-suite test_messages
  type:               exitcode-stdio-1.0
  main-is:            test_messages.hs
  other-modules:      RichText_QCA
                    , Message_QCA
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
                    , ScopedTypeVariables
  ghc-options:        -Wall -fno-warn-orphans -Wcompat
  if impl(ghc >= 8.2)
    ghc-options: -fhide-source-paths

  hs-source-dirs:     test
  build-depends:      base                 >=4.7      && <5
                    , Unique               >= 0.4     && < 0.5
                    , checkers             >= 0.4     && < 0.6
                    , tasty                >= 0.11    && < 1.3
                    , tasty-hunit          >= 0.9     && < 0.12
                    , tasty-quickcheck     >= 0.8     && < 0.12
                    , bytestring
                    , commonmark
                    , containers
                    , matterhorn
                    , mattermost-api
                    , mattermost-api-qc
                    , text
                    , time
                    , uuid
