name:             mattermost-demo-client
version:          0.1.0.0
-- synopsis:
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2016 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.12

executable mattermost-demo-client
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
                       State
                       Zipper
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -Wall -threaded
  build-depends:       base >=4.7 && <4.9
                     , mattermost-api
                     , unordered-containers
                     , text
                     , bytestring
                     , aeson
                     , process
                     , connection
                     , microlens-platform
                     , brick
                     , data-default
                     , vty
                     , transformers
                     , text-zipper
  default-language:    Haskell2010
